# Clash-Royale-RL-bot

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
configs/: cards_registry.yaml  default.yaml
docs/: BACKLOG.md  IL_DATA_SOURCES.md  ROADMAP.md  SIM_STATUS.md  VIDEO_CV_ROADMAP.md
scripts/: auto_review_card_registry.py  benchmark_sim_throughput.py  bootstrap_github_workflow.py  build_card_registry_backlog.py  build_tap_bc_dataset.py  build_video_annotation_queue.py  build_video_bc_dataset.py  collect_random_sim_data.py  compare_eval_runs.py  emulator_smoke_test.py  eval_policy.py  export_video_annotation_frames.py  extract_video_states.py  merge_il_datasets.py  record_emulator_session.py  review_card_registry.py  split_il_dataset.py  sync_cards_from_api.py  track_video_states.py  train_bc.py  train_ppo.py  visualize_sim_episode.py
src/crbot/: __init__.py
src/crbot/cards/: __init__.py  registry.py  sync.py
src/crbot/emulator/: __init__.py  adb_client.py  bluestacks.py
src/crbot/models/: __init__.py  bc_policy.py
src/crbot/recording/: __init__.py  pipeline.py
tests/unit/: test_bootstrap_github_workflow.py  test_card_registry.py  test_card_registry_backlog.py  test_card_registry_review.py  test_card_sync.py  test_compare_eval_runs.py  test_data_io.py  test_eval_policy.py  test_recording_pipeline.py  test_sim_env.py  test_split_il_dataset.py  test_train_bc_masking.py  test_vision_annotation_queue.py  test_vision_state_extractor.py  test_vision_tracking.py  test_visualize_sim_episode.py
(+6 files in other folders)
